fix: user audit system test

--- a/packages/beyondinsight_password_safe/_dev/deploy/docker/files/config.yml
+++ b/packages/beyondinsight_password_safe/_dev/deploy/docker/files/config.yml
@@ -1,19 +1,15 @@
 rules:
   #### UserAudits ####
-  - path: /Auth/SignAppin
+  - path:  "/BeyondTrust/api/public/v3/Auth/SignAppin"
     methods: ["POST"]
     request_headers:
-      Authorization:
-        - "PS-Auth key=abcd1234byiapitoken;runas=testuser;pwd=[password];"
-      Content-Type:
-        - "application/json"
+      Authorization: ['PS-Auth key=abcd1234byiapitoken;runas=testuser;pwd=\[password\];']
+      Content-Type: ['application/json']
     responses:
       - status_code: 200
         headers:
-          Content-Type:
-            - "application/json"
-          Set-Cookie:
-            - "ASP.NET_SessionId=iijfdzn51fdh01axylh1nnd1"
+          Content-Type: ['application/json']
+          Set-Cookie: ['ASP.NET_SessionId=iijfdzn51fdh01axylh1nnd1']
         body: |
           {
             "UserId": 1,
@@ -22,19 +18,16 @@ rules:
             "UserName": "testuser",
             "Name": "Test User"
           }
-      - status_code: 401
-  - path: /UserAudits
+         
+  - path:  "/BeyondTrust/api/public/v3/UserAudits"
     methods: ["GET"]
     request_headers:
-      Content-Type:
-        - "application/json"
-      Cookie:
-        - "ASP.NET_SessionId=iijfdzn51fdh01axylh1nnd1"
+      Content-Type: ['application/json']
+      Cookie: ['ASP.NET_SessionId=iijfdzn51fdh01axylh1nnd1']
     responses:
       - status_code: 200
         headers:
-          Content-Type:
-            - "application/json"
+          Content-Type: ['application/json']
         body: |
           {
             "TotalCount": 1,
