--- a/packages/beyondinsight_password_safe/data_stream/useraudit/manifest.yml
+++ b/packages/beyondinsight_password_safe/data_stream/useraudit/manifest.yml
@@ -15,7 +15,7 @@ streams:
         required: true
         default: "10s"
       - name: initial_interval
-        type: text
+        type: integer
         title: Initial Interval
         multi: false
         required: true
