fix: system tests

--- a/packages/beyondinsight_password_safe/data_stream/managedsystem/fields/fields.yml
+++ b/packages/beyondinsight_password_safe/data_stream/managedsystem/fields/fields.yml
@@ -2,7 +2,7 @@
   title: 'BeyondInsight Password Safe Managed Systems Fields'
   type: group
   fields:
-    - name: managed_system
+    - name: managedsystem
       type: group
       fields:
         - name: workgroup_id
