--- a/packages/beyondinsight_password_safe/_dev/deploy/docker/files/config.yml
+++ b/packages/beyondinsight_password_safe/_dev/deploy/docker/files/config.yml
@@ -43,3 +43,126 @@ rules:
               }
             ]
           }
+  - path:  "/BeyondTrust/api/public/v3/Sessions"
+    methods: ["GET"]
+    request_headers:
+      Content-Type: ['application/json']
+      Cookie: ['ASP.NET_SessionId=iijfdzn51fdh01axylh1nnd1']
+    responses:
+      - status_code: 200
+        headers:
+          Content-Type: ['application/json']
+        body: |
+            [
+              {
+                "SessionID": 1,
+                "UserID": 6,
+                "NodeID": "a5c29153-b351-41f1-a12b-0c4da9408d79",
+                "Status": 0,
+                "ArchiveStatus": 0,
+                "Protocol": 0,
+                "StartTime": null,
+                "EndTime": null,
+                "Duration": 0,
+                "AssetName": "localhost",
+                "ManagedSystemID": 13,
+                "ManagedAccountID": null,
+                "ManagedAccountName": "example.com\\sdfsfdf",
+                "RecordKey": "3958d725d16119a95e64af424a7f813f1be4a6cd34earwr324454bcecce70ee37cbaed",
+                "Token": "bcb8c654b827a4465846c96b5d6dd8f2935c6a1f02f067fd0976dfsdf6d7370c22"
+              }
+            ]
+  - path:  "/BeyondTrust/api/public/v3/ManagedAccounts"
+    methods: ["GET"]
+    request_headers:
+      Content-Type: ['application/json']
+      Cookie: ['ASP.NET_SessionId=iijfdzn51fdh01axylh1nnd1']
+    responses:
+      - status_code: 200
+        headers:
+          Content-Type: ['application/json']
+        body: |
+            [
+              {
+                "PlatformID": 4,
+                "SystemId": 5,
+                "SystemName": "KittenGrowth",
+                "InstanceName": "",
+                "DomainName": null,
+                "AccountId": 5,
+                "AccountName": "fsd.Iredfsne",
+                "UserPrincipalName": null,
+                "ApplicationID": null,
+                "ApplicationDisplayName": null,
+                "MaximumReleaseDuration": 525600,
+                "DefaultReleaseDuration": 120,
+                "LastChangeDate": "2024-12-10T08:57:45.9",
+                "NextChangeDate": null,
+                "ChangeState": 0,
+                "IsChanging": false,
+                "IsISAAccess": true,
+                "PreferredNodeID": "e0148f55-f3c6-4049-673e-5093b6bcf831"
+              }
+            ] 
+  - path:  "/BeyondTrust/api/public/v3/ManagedSystems"
+    methods: ["GET"]
+    request_headers:
+      Content-Type: ['application/json']
+      Cookie: ['ASP.NET_SessionId=iijfdzn51fdh01axylh1nnd1']
+    responses:
+      - status_code: 200
+        headers:
+          Content-Type: ['application/json']
+        body: |
+            {
+             "TotalCount": 1,
+             "Data": [
+                {
+                    "ManagedSystemID": 13,
+                    "EntityTypeID": 1,
+                    "AssetID": 13,
+                    "DatabaseID": null,
+                    "DirectoryID": null,
+                    "CloudID": null,
+                    "WorkgroupID": 1,
+                    "HostName": "AardvarkAgreement",
+                    "DnsName": "AardvarkAgreement.example.com",
+                    "IPAddress": "172.16.152.110",
+                    "InstanceName": null,
+                    "IsDefaultInstance": null,
+                    "Template": null,
+                    "ForestName": null,
+                    "UseSSL": null,
+                    "OracleInternetDirectoryID": null,
+                    "OracleInternetDirectoryServiceName": null,
+                    "SystemName": "AardvarkAgreement",
+                    "PlatformID": 4,
+                    "NetBiosName": null,
+                    "Port": null,
+                    "Timeout": 30,
+                    "Description": null,
+                    "ContactEmail": null,
+                    "PasswordRuleID": 0,
+                    "DSSKeyRuleID": 0,
+                    "ReleaseDuration": 120,
+                    "MaxReleaseDuration": 525600,
+                    "ISAReleaseDuration": 120,
+                    "AutoManagementFlag": true,
+                    "FunctionalAccountID": 14,
+                    "LoginAccountID": null,
+                    "ElevationCommand": null,
+                    "SshKeyEnforcementMode": 0,
+                    "CheckPasswordFlag": false,
+                    "ChangePasswordAfterAnyReleaseFlag": false,
+                    "ResetPasswordOnMismatchFlag": false,
+                    "ChangeFrequencyType": "first",
+                    "ChangeFrequencyDays": 30,
+                    "ChangeTime": "23:30",
+                    "AccountNameFormat": 0,
+                    "RemoteClientType": "None",
+                    "ApplicationHostID": null,
+                    "IsApplicationHost": false,
+                    "AccessURL": null
+                 }
+              ]       
+            }             
